# mazimi

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md  compose.dev.yml  compose.yml  magimi_psst_business_plan_draft.md  magimi_psst_example_style.md  magimi_psst_improved.md  magimi_psst_review_report.md  package.json  구현 (1).md  웰로.md  웰로2.md
.claude/: settings.local.json
.claude/agents/: data-engineer.md  mobile-app-builder.md  nextjs-frontend.md  product-manager.md  qa-tester.md  researcher.md  rust-backend.md  security-officer.md  startup-advisor.md  ui-designer.md
.github/workflows/: ci.yml  deploy.yml
.harness/: README.md  objective.yaml  program.md  results.tsv
.harness/incidents/: README.md
.harness/memory-bank/: README.md  facts.tsv  promotions.tsv
.harness/replay/: README.md
.omc/: prd.json  project-memory.json
.omc/sessions/: 0d76389b-d091-46ac-8fb3-671332053dd5.json  1649b6d1-fda2-4de0-b3c6-54893914f814.json  16cbd7b3-1372-4dd4-8264-070218d5134d.json  1b7104a4-a27e-4a49-876c-ed25ee3e6206.json  2284ce53-f0bf-4c0f-b349-ff757adfe9ea.json  2457b4ba-28dc-41cd-9741-82055fd537a2.json  2f23e9fe-f355-4320-b5e2-a183fdb3509a.json  30627947-5ded-45fb-9bcc-b5b30a58eab9.json  3406d891-a3a7-4ab9-b70b-0cfd14e6adf1.json  3845432b-06b1-4325-9795-5caebb9d19ab.json  396406b1-fd77-42e3-9428-2b635b3d3d1e.json  48f5d886-9691-49a0-b4d4-bd360b4a783c.json  54f13104-ca35-4389-8e71-1a501d697028.json  5603d4e1-e89c-4e28-9de9-40e002bc1aac.json  57df342d-a5d5-40c4-b985-ea50638616a5.json  5ad922d7-9105-4de9-beff-c36a807a841e.json  5ebfdf98-ea72-478b-9560-778d8ca53334.json  6082976f-cfa8-4f4d-a969-2b2bb4c662e0.json  60bb823b-4b4c-48c9-8b75-c33d85c511ce.json  7d5772c7-af77-4b4f-8555-7c0a0a7c9b26.json  7ebf87d1-569c-46f2-8d0d-ca1e11a85f14.json  80481495-2953-4e35-8e9f-b0f99184561f.json  8aa8052a-86db-43bb-85a6-d6f826b2b14c.json  94666d92-1e3c-4ee5-a9cf-7a25f3c780c1.json  98b95fcd-3185-4833-8bbe-1b234994bcfa.json  ae89725e-d974-4daa-89f9-b52a64dcb705.json  af2e20a8-cae6-4c55-908e-f57ae5aaa907.json  be2f33fc-8d09-4f8c-a7ab-0583abc900a0.json  c40fd5d1-88cc-46c3-b742-e48e6ce28f5f.json  cf461378-b02e-4025-b032-f79d2ff8e775.json  dddf7dab-1a5f-4ef1-bfef-a917d6404166.json  e18367c3-55be-48e0-b3b5-e9ad51c10982.json  e797d8cf-a349-4d4f-ac27-34eeafdc601a.json  e8518f7a-fc37-43b8-bf15-90bd7aba1652.json  (+3 more)
crates/api/: Cargo.toml
crates/api/src/: auth.rs  errors.rs  lib.rs  main.rs  payment_provider.rs
crates/api/src/routes/: admin.rs  alerts.rs  auth.rs  bookmark.rs  dashboard.rs  documents.rs  health.rs  mod.rs  my.rs  payment.rs  profile.rs  programs.rs  push.rs  recommend.rs  stack_check.rs  state.rs
crates/api/tests/: api_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  rule_engine.rs
crates/worker/: Cargo.toml
crates/worker/src/: alerts.rs  lib.rs  main.rs  pipeline.rs
crates/worker/src/notifications/: expo_push.rs  fcm.rs  kakao.rs  mod.rs
crates/worker/src/sources/: dreamspon.rs  financial.rs  gov_benefits.rs  local_scraper.rs  local_welfare.rs  mod.rs  national_welfare.rs  scholarship.rs  worknet.rs  youth_center.rs
docs/: api-keys-guide.md  api.md  ccg-auto-application-strategy.md  ccg-business-model.md  ccg-differentiation-strategy.md  ccg-final-review.md  ccg-sessions-log.md  ccg-wello-bozogae-comparison.md  deploy-guide.md  deployment-guide.md  expansion-strategy.md  features.md  ir-bm-slide-draft.md  privacy-policy.md  remaining-tasks.md  terms-of-service.md  결제.md  기능흐름.md
scripts/: backup.sh  deploy.sh
(+197 files in other folders)
