[workspace]
resolver = "2"
members = ["crates/api", "crates/worker", "crates/core"]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
quick-xml = { version = "0.36", features = ["serialize", "async-tokio"] }
scraper = "0.22"
